--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "@emotion/styled": "^11.6.0",
     "gatsby": "^4.6.0",
     "gatsby-plugin-emotion": "^7.6.0",
+    "gatsby-plugin-image": "^2.6.0",
+    "gatsby-plugin-manifest": "^4.6.0",
+    "gatsby-plugin-sharp": "^4.6.0",
+    "gatsby-source-filesystem": "^4.6.0",
+    "gatsby-transformer-sharp": "^4.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
