--- a/package.json
+++ b/package.json
@@ -26,5 +26,6 @@
     "gatsby-transformer-sharp": "^4.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
-  }
+  },
+  "devDependencies": {}
 }
