--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@emotion/styled": "^11.6.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@tinymce/tinymce-react": "^3.13.1",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "gatsby": "^4.6.0",
     "gatsby-plugin-emotion": "^7.6.0",
     "gatsby-plugin-image": "^2.6.0",
@@ -29,6 +32,8 @@
     "gatsby-transformer-sharp": "^4.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-draft-wysiwyg": "^1.14.7",
+    "react-draft-wysiwyg-a": "^1.14.5-1",
     "xdm": "^3.3.4"
   },
   "devDependencies": {}
