--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@loadable/component": "^5.15.2",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@tinymce/tinymce-react": "^3.13.1",
@@ -35,6 +36,5 @@
     "react-draft-wysiwyg": "^1.14.7",
     "react-draft-wysiwyg-a": "^1.14.5-1",
     "xdm": "^3.3.4"
-  },
-  "devDependencies": {}
+  }
 }
