seo and landing page responsiveness

--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "gatsby": "^4.6.0",
-    "gatsby-plugin-advanced-sitemap": "^2.0.0",
     "gatsby-plugin-emotion": "^7.6.0",
     "gatsby-plugin-google-analytics": "^4.9.0",
     "gatsby-plugin-image": "^2.6.0",
     "gatsby-plugin-manifest": "^4.6.0",
     "gatsby-plugin-mdx": "^3.7.1",
     "gatsby-plugin-sharp": "^4.6.0",
+    "gatsby-plugin-sitemap": "^5.10.2",
     "gatsby-source-filesystem": "^4.6.0",
     "gatsby-transformer-sharp": "^4.6.0",
     "react": "^17.0.1",
